--- a/Smart Station/index.html
+++ b/Smart Station/index.html
@@ -14,6 +14,7 @@
   <body>
     <header>
       <h1>Smart Station Dashboard</h1>
+      <button id="toggleTheme">Toggle Dark Mode</button>
     </header>
     <main>
       <div class="station-selector">
